# TrialAssignment_Avantis3D

./: .travis.yml  CMakeLists.txt  README.md  conanfile.txt
src/: equal_to_zero.h  fmap.cpp  fmap.h  geom_type_transform.h  geom_types.h  line_segment_line_segment_intersection_2d.cpp  line_segment_line_segment_intersection_3d.cpp  main.cpp  triangle_line_segment_intersection_2d.cpp  triangle_line_segment_intersection_3d.cpp  types.h
